Long answers should no longer overflow, displayWordAnswer removed to use only wordAnswer. Commented out lines in case there was something I missed in my 8 months absence.

--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,8 @@ form {
 #streakBox {
   text-align: center;
   font-weight: bold;
+  hyphens: manual;
+  overflow-wrap: anywhere;
 }
 
 details ul {
